# CMakeList.txt : CMake project for DesignPatterns, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("DesignPatterns")

add_subdirectory("Factory")

# Add source to this project's executable.
# add_executable (DesignPatterns  )

# TODO: Add tests and install targets if needed.
